--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:title="@string/app_name" />
 
     <GridView
+        android:layout_below="@id/main_toolbar"
         android:id="@+id/main_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
