--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:background="@null"
-    android:gravity="center"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_gravity="center"
+              android:background="@null"
+              android:gravity="center"
+              android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/item_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+    <RelativeLayout
         android:layout_gravity="center"
         android:gravity="center"
-        android:src="@drawable/phiz31" />
+        android:layout_width="48dp"
+        android:layout_height="48dp">
+
+        <ImageView
+            android:id="@+id/item_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/phiz31"/>
+
+        <ImageView
+            android:id="@+id/item_icon_enabled"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@android:drawable/ic_lock_lock"/>
+
+
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/item_name"
@@ -22,6 +36,6 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:singleLine="true"
-        android:text="test" />
+        android:text="test"/>
 
 </LinearLayout>
