--- a/app/src/main/res/layout/main_recyclerview.xml
+++ b/app/src/main/res/layout/main_recyclerview.xml
@@ -7,15 +7,10 @@
         android:id="@+id/main_toolbar"
         layout="@layout/include_toolbar"/>
 
-    <GridView
-        android:layout_below="@id/main_toolbar"
-        android:id="@+id/main_grid"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:horizontalSpacing="10dp"
-        android:numColumns="4"
-        android:stackFromBottom="true"
-        android:verticalSpacing="10dp"/>
+        android:layout_height="match_parent"/>
 
     <include
         android:id="@+id/main_drawerlayout"
