--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:layout_marginTop="40dp"
         android:id="@+id/item_icon"
         android:layout_width="48dp"
         android:layout_height="48dp"
@@ -17,11 +18,9 @@
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="48dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:gravity="center"
-        android:singleLine="true"
-        android:text="test" />
+        android:gravity="center"/>
 
 </LinearLayout>
